changes on home page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <!-- <div class="overlay_border"></div> -->
+    <div class="overlay_border"></div>
     <!-- menu_icon -->
     <!-- video poup -->
     <!-- <div class="video_overlay">
